srcs/ftps-template.yml
apiVersion: v1
kind: Service
metadata:
  name: ftps
  labels:
    app: ftps-app
spec:
  ports:
  - port: 21
    targetPort: 21
    protocol: TCP
    name: ftps
  - port: 21000
    protocol: TCP
    name: ftps-data
  selector:
    app: ftps-app
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps
  labels:
    app: ftps-app
spec:
  selector:
    matchLabels:
      app: ftps-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ftps-app
    spec:
      containers:
      - name: ftps
        image: custom-ftps:1
        imagePullPolicy: Never
        ports:
        - containerPort: 21
          hostPort: 21
        - containerPort: 21000
          hostPort: 21000
        volumeMounts:
        - name: ftps-persistent-storage
          mountPath: /ftps/
      volumes:
        - name: ftps-persistent-storage
          persistentVolumeClaim:
            claimName: ftps-pv-claim
