srcs/influxdb.yml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  type: ClusterIP
  ports:
  - name: influxdb
    port: 8086
    targetPort: 8086
    protocol: TCP
  selector:
    app: influxdb

---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: influxdb-deployment
spec:
  selector:
    matchLabels:
      app: influxdb 
  replicas: 1    
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - image: custom-influxdb:1
        imagePullPolicy: Never
        name: influxdb
        ports:
        - containerPort: 8086
        volumeMounts:
          - mountPath: /var/lib/influxdb
            name: influxdb-persistent-storage
      volumes:
      - name: influxdb-persistent-storage
        persistentVolumeClaim:
          claimName: influxdb-pv-claim
