srcs/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: ft_services
spec:
  selector:
    matchLabels:
      app: ft_services
      tier: nginx
  strategy:
      type: Recreate
  template:
    metadata:
      labels:
        app: ft_services
        tier: nginx
    spec:
      containers:
      - name: custom-nginx
        image: custom-nginx:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
          name: nginx-http
        - containerPort: 443
          name: nginx-https
        - containerPort: 22
          name: nginx-ssh

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
      app: ft_services
spec:
  ports:
    - port: 80
      name: nginx-http
    - port: 443
      name: nginx-https
    - port: 22
      name: nginx-ssh
  selector:
    app: ft_services
    tier: nginx
  type: NodePort
