srcs/wordpress.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 5050
      targetPort: 5050
      protocol: TCP
      name: wordpress
  selector:
    app: wordpress
    tier: mysql
  type: LoadBalancer

---

apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
      - image: custom-wordpress:1
        name: wordpress
        ports:
        - containerPort: 5050
          name: wordpress
        imagePullPolicy: Never
